--- a/pom.xml
+++ b/pom.xml
@@ -73,3 +73,9 @@
     </plugins>
   </build>
 </project>
+<distributionManagement>
+        <repository>
+            <id>nexus-releases</id> <!-- Match this ID with the settings.xml -->
+            <url>http://16.171.143.203:8081/repository/java-packages-private/</url>
+        </repository>
+</distributionManagement>
