--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
   <name>my-app</name>
   <url>https://maven.apache.org</url>
   <dependencies>
@@ -72,10 +72,10 @@
       </plugin>
     </plugins>
   </build>
-</project>
-<distributionManagement>
+  <distributionManagement>
         <repository>
             <id>nexus-releases</id> <!-- Match this ID with the settings.xml -->
             <url>http://16.171.143.203:8081/repository/java-packages-private/</url>
         </repository>
-</distributionManagement>
+  </distributionManagement>
+</project>
